[project]
name = "inky-frame"
version = "0.1.0"
description = "rsp zero with inky frame"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "gpiozero>=2.0.1",
    "inky>=2.1.0 ; sys_platform == 'linux'",
    "pi-heif>=1.1.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "schedule>=1.2.2",
]

# without this, your rsp will crash lol
# [tool.uv]
# prerelease = "allow"
# concurrent-builds = 1
# concurrent-downloads = 1
# concurrent-installs = 1
# environments = ["sys_platform == 'linux'"]

# [[tool.uv.index]]
# # Optional name for the index.
# name = "piwheels"
# # Required URL for the index.
# url = "https://www.piwheels.org/simple"
# default = true